--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -5,7 +5,14 @@
 \usepackage{epstopdf}
 \usepackage{inputenc}
 \usepackage{geometry}
+\usepackage{titlesec}
 \setlength{\parindent}{0pt}
+
+\titleformat{\section}[runin]
+{\normalfont\bfseries}
+{}{}{}
+
+
 \begin{document}
 
 \title{Álgebras, Grupos y Representaciones \\
@@ -16,14 +23,14 @@
 
 \maketitle
 
-\textbf{Ejercicio 1.} \emph{Sea \(A\) un anillo. Diremos que \(A\) es trivial si
+\section{Ejercicio 1.} \emph{Sea \(A\) un anillo. Diremos que \(A\) es trivial si
   \(A = \{0\}\). Demostrar que \(A\) es trivial si, y sólo si, \(1 = 0\).}\\
 
 Supongamos que \(A\) es trivial, entonces como \(A\) es un anillo, \(\exists 1
 \in A \implies 0 = 1\). Sea ahora \(1 = 0\), sea \(a \in A\) se tiene que \(a =
-a*1 = a*0 = 0 \implies A = \{0\}\).\\
+a*1 = a*0 = 0 \implies A = \{0\}\).
 
-\textbf{Ejercicio 2.} \emph{Sea \(K\) un cuerpo y \(M_n(K)\) el anillo de
+\section{Ejercicio 2.} \emph{Sea \(K\) un cuerpo y \(M_n(K)\) el anillo de
   matrices cuadradas de orden \(n\) con entradas en \(K\). Demostrar que
   \(Z(M_n(K)) = \{kI_n \ | \  k \in K\}\), donde \(I_n\) es la matriz identidad
   de orden \(n\)}.\\
@@ -41,9 +48,9 @@ tener la columna \(i\)-ésima de \(A\) en la columna \(j\)-ésima.
 Luego estamos igualando una matriz con una sola fila no nula y una con una sola
 columna no nula, por ello \(A\) debe ser diagonal. Además, el valor \(i\)-ésimo
 y el valor \(j\)-ésimo de la diagonal deben coincidir. Con esto \(A \in \{kI_n
-\ | \  k \in K\}\).\\
+\ | \  k \in K\}\).
 
-\textbf{Ejercicio 3.} \emph{Sea \(V\) un espacio vectorial sobre un cuerpo \(K\)
+\section{Ejercicio 3.} \emph{Sea \(V\) un espacio vectorial sobre un cuerpo \(K\)
   y el
   conjunto}
 \[
@@ -70,30 +77,109 @@ La aplicación \(h\) está bien definida por ser \(V\) un espacio vectorial sobr
 \end{itemize}
 
 Hagamos la última comprobación que se nos pide \(T \circ h(k) (v) = T(kv) =
-kT(v) = h(k) \circ T (v)\). \\
+kT(v) = h(k) \circ T (v)\).
 
-\textbf{Ejercicio 4.} \emph{Supongamos que \(A\) y \(B\) son \(K\)-álgebras son
+\section{Ejercicio 4. TODO.} \emph{Supongamos que \(A\) y \(B\) son \(K\)-álgebras son
 morfismos de estructura \(\rho_A\) y \(\rho_B\). Sea \( \phi:A \to B\) un morfismo
 de anillos. Demostrar que \(\phi\) es un morfismo de \(K\)-álgebras si, y sólo si,
 \(\phi \circ \rho_A = \rho_B\).} \\
 
 Sea \(\phi \circ \rho_A = \rho_B\) la propiedad de \(\phi\) que debemos
 comprobar para ser un morfismo de \(K\)-álgebras es que dados \(a
-\in A \)  y \(k \in K \) se cumple que \(\phi(ka) = k\phi(a)\).\\
+\in A \)  y \(k \in K \) se cumple que \(\phi(ka) = k\phi(a)\).
 
-\textbf{Ejercicio 5.} \emph{Sea \(A\) un espacio vectorial sobre un cuerpo
+\section{Ejercicio 5.} \emph{Sea \(A\) un espacio vectorial sobre un cuerpo
   \(K\). Demostrar que dar una estructura de \(K\)-álgebra asociativa unital
   sobre \(A\) es equivalente a dar una multiplicación asociativa \(K\)-bilineal \(\star :A
   \times A \to A\) junto con una aplicación \(K\)-lineal \(\tau : K \to A\) tal
   que \(\tau(k)\star a = ka = a \star \tau(k) \ \forall k \in K, a \in A\)}\\
 
-Supongamos que tenemos una estructura de \(K\)-álgebra sobre \(A\). Esto es un
-morfismo de anillos \(\rho :K \to Z(A)\)
-
+Supongamos que tenemos una estructura de \(K\)-álgebra sobre \(A\). Denotamos \(\star\) a la
+multiplicación de \(A\) como anillo y \(\tau :K \to Z(A)\) al morfismo que dota
+de estructura de \(K\)-álgebra.
+ Veamos que \(\tau\) es \(K\)-lineal, sea \(k \in K\):
+\[
+\tau(k) = \tau(k) \star 1_A = k1_A = k \tau(1_K)
+\]
+Comprobemos ahora que \(\star\) es \(K\)-bilineal, la bilinealidad viene dada
+por la estructura de anillo. Sean \(k \in K, a,b \in A\)
+\[
+k(a \star b) = \tau(k) \star (a \star b) = (\tau(k) \star a) \star b = (ka)
+\star b
+\]
+\[
+k(a \star b) = \tau(k) \star (a \star b) = (\tau(k) \star a) \star b = (a \star
+\tau(k)) \star b = a \star (\tau(k) \star b) = a \star (kb)
+\]
 
 Supongamos ahora que tenemos ambas aplicaciones definidas. Notamos
-que \(\tau (k) = k \tau(1_K)\), además \(\tau(1_K)\star a = 1_Ka = a = a\star
-\tau(1_K)\), luego \(\tau(1_K) = 1_A\). Es facil comprobar que con esto \(\tau\)
-es un morfismo de anillos con imagen en \(Z(A)\) por hipótesis
+que \(\tau(1_K)\star a = 1_Ka = a = a\star
+\tau(1_K)\). Luego \(\tau(1_K) := 1_A\) actua como elemento
+neutro de \(A\) para la operación \(\star\). Si comprobamos que \(A\) con
+\((\star, 1_A)\) es un anillo, entonces tendremos que \(A\) es una
+\(K\)-álgebra. Como la operación es asociativa por hipótesis y ya tenemos el
+elemento neutro, solo nos quedaría comprobar la distributividad que la tenemos
+por ser \(\star\) una aplicación bilineal.
+
+\section{Ejercicio 6. *} \emph{Sea \(K\) un cuerpo. Comprobar que el anillo de polinomios
+es una \(K[X]\)-álgebra. Si ahora tomamos un ideal no nulo \(I\) de
+\(K[X]\), comprobar que \(A = K[X]/I\) tiene estructura de
+\(K\)-álgebra. Sabemos que existe un único polinómio \(p(X) \in K[X]\) tal que
+\(I = \langle p(X) \rangle\). Llamamos \(n\) al grado de \(p(X)\), y suponemos
+\(n > 0\). Comprobar que \(\mathcal{B} = \{1 + I, x + I, \dots, x^{n-1} + I\}\)
+es una base de \(A\) como \(K\)-espacio vectorial y, por tanto \(dim_KA = n\).
+Sea}
+\[
+p(X) = p_0 + p_1X + p_2X^2\dots + X^n
+\]
+\emph{Comprobar que la matriz de \(M_n(K)\) que representa al endomorfismo \(\lambda(x
++ I)\) con respecto a la base \(\mathcal{B}\) es}
+\[
+\tilde{N}(p) = \begin{bmatrix}
+    0       &  \dots  & 0 & -p_0 \\
+    1       &  \dots  & 0 & -p_1 \\
+    \vdots &  & \vdots & \vdots \\
+    0       &  \dots  & 1 & -p_{n-1}
+\end{bmatrix}
+\]
+\emph{y que \(A\) es isomorfa a la subálgebra \(\{a_0I + a_1\tilde{N}(p) + \dots +
+  a_{n-1}\tilde{N}(p)^{n-1} : a_0, a_1, \dots, a_{n-1} \in K\} \subset M_n(K)\)}\\
+
+El anillo de polinomios \(K[X]\) es una \(K\)-álgebra utilizando el morfismo de
+anillos
+\[
+\begin{aligned}
+  \rho: K &\to K[X]\\
+        k &\mapsto k
+\end{aligned}
+\]
+El morfismo de anillos que da a \(A = K[X]/I\) estructura de \(K\)-álgebra es el
+siguiente:
+\[
+\begin{aligned}
+  \rho: K &\to K[X]/I \\
+  k &\mapsto k + I
+\end{aligned}
+\]
+La comprobación de que se tratan de morfismos de anillos es rutinaria.
+El algoritmo de división nos asegura que todos los polinomios de \(A\) tienen
+grado a lo sumo \(n-1\), por tanto \(\mathcal{B}\) es un sistema de generadores
+de \(A\) y forman una base por ser linealmente independientes.
+
+Sea el endomorfismo \(\lamda(x+I)(a) = (x+I)a\), es claro que las primeras
+\(n-1\) columnas de la matriz \(\tilde{N}(p)\) corresponden a multiplicar \(x +
+I\) por los elementos \(1 + I, \dots, x^{n-2} + I\). Ahora,
+\[
+(x + I)(x^{n-1} + I) = x^n + I = -p(X) + I
+\]
+De ahí la última columna de la matriz.
+
+\textbf{TODO: Dar isomorfismo y comprobarlo}
+
+\section{Ejercicio 7. *} \emph{Sea \(K\) un cuerpo. Dar la lista, salvo isomorfismos, de
+todas las \(K\)-álgebras asociativas unitales de dimensión 2.}\\
+
+\section{Ejercicio 8.} \emph{Expresar el cuerpo \(\mathbb{Q}(\sqrt(2))\) como una
+\(\mathbb{Q}\)-álgebra de un álgebra de matrices sobre \(\mathbb{Q}\).}
 
 \end{document}
