--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -23,163 +23,24 @@
 
 \maketitle
 
-\section{Ejercicio 1.} \emph{Sea \(A\) un anillo. Diremos que \(A\) es trivial si
-  \(A = \{0\}\). Demostrar que \(A\) es trivial si, y sólo si, \(1 = 0\).}\\
 
-Supongamos que \(A\) es trivial, entonces como \(A\) es un anillo, \(\exists 1
-\in A \implies 0 = 1\). Sea ahora \(1 = 0\), sea \(a \in A\) se tiene que \(a =
-a*1 = a*0 = 0 \implies A = \{0\}\).
 
-\section{Ejercicio 2.} \emph{Sea \(K\) un cuerpo y \(M_n(K)\) el anillo de
-  matrices cuadradas de orden \(n\) con entradas en \(K\). Demostrar que
-  \(Z(M_n(K)) = \{kI_n \ | \  k \in K\}\), donde \(I_n\) es la matriz identidad
-  de orden \(n\)}.\\
 
-Es evidente que  \(\{kI_n \ | \  k \in K\} \subset Z(M_n(K))\). Tomemos \(A \in
-Z(M_n(K))\), \(E_{ij} \in M_n(K)\) la matriz de ceros salvo un \(1\) en la
-position \((i,j)\). Se tiene que
-\[
-E_{ij}A = AE_{ij} \ \forall i,j \in \{0,\dots,n-1\}
-\]
-Pero es sencillo comprobar que \(E_{ij}A\) es una matriz de ceros salvo por
-tener la fila \(j\)-ésima de \(A\) en la fila \(i\)-ésima. De igual forma \(AE_{ij}\) es una matriz de ceros salvo por
-tener la columna \(i\)-ésima de \(A\) en la columna \(j\)-ésima.
+\input{Ejercicio1}
+\input{Ejercicio2}
+\input{Ejercicio3}
+\input{Ejercicio4}
+\input{Ejercicio5}
+\input{Ejercicio6}
+\input{Ejercicio7}
+\input{Ejercicio8}
 
-Luego estamos igualando una matriz con una sola fila no nula y una con una sola
-columna no nula, por ello \(A\) debe ser diagonal. Además, el valor \(i\)-ésimo
-y el valor \(j\)-ésimo de la diagonal deben coincidir. Con esto \(A \in \{kI_n
-\ | \  k \in K\}\).
 
-\section{Ejercicio 3.} \emph{Sea \(V\) un espacio vectorial sobre un cuerpo \(K\)
-  y el
-  conjunto}
-\[
-End_K(V) = \{f:V \to V \ | \ f \text{ \emph{es} } K\text{\emph{-lineal}}\}
-\]
-\emph{comprobar que es un subanillo de \(End(V)\). Consideremos la aplicación \(h:K \to End_K(V)\)
-que asigna a cada \(k \in K\) la homotecia \(h(k):V \to V\), definido por
-\(h(k)(v) = kv \ \forall v \in V\). Comprobar que \(h\) está bien definida y que es
-un morfismo de anillos. Además si \(T:V \to V\) es \(K\)-lineal y \(k \in K\),
-comprobar que \(T \circ h(k) = h(k) \circ T\), luego \(Im(h) \subset
-Z(End_K(V))\). Con esto \(End_K(V)\) es una \(K\)-álgebra.}\\
 
-Es claro que con las operaciones de \(End(V)\), se converva la \(K\)-linealidad,
-luego \(End_K(V)\) es un subanillo.
 
-La aplicación \(h\) está bien definida por ser \(V\) un espacio vectorial sobre
-\(K\). Veamos que es un morfismo de anillos.
-\begin{itemize}
-\item Sean \(a,b \in K\) y \(v \in V\), \(h(a + b)(v) = (a+b)v = av + bv =
-  h(a)(v) + h(b)(v) = (h(a) + h(b))(v) \)
-\item Sean \(a,b \in K\) y \(v \in V\), \(h(ab)(v) = (ab)v = a(bv) =
-  ak(b)(v) = k(a)\circ k(b) (v) \)
-\item Sea \(v \in V\), \(k(1)(v) = 1v = v = Id(v)\)
-\end{itemize}
 
-Hagamos la última comprobación que se nos pide \(T \circ h(k) (v) = T(kv) =
-kT(v) = h(k) \circ T (v)\).
 
-\section{Ejercicio 4. TODO.} \emph{Supongamos que \(A\) y \(B\) son \(K\)-álgebras son
-morfismos de estructura \(\rho_A\) y \(\rho_B\). Sea \( \phi:A \to B\) un morfismo
-de anillos. Demostrar que \(\phi\) es un morfismo de \(K\)-álgebras si, y sólo si,
-\(\phi \circ \rho_A = \rho_B\).} \\
 
-Sea \(\phi \circ \rho_A = \rho_B\) la propiedad de \(\phi\) que debemos
-comprobar para ser un morfismo de \(K\)-álgebras es que dados \(a
-\in A \)  y \(k \in K \) se cumple que \(\phi(ka) = k\phi(a)\).
 
-\section{Ejercicio 5.} \emph{Sea \(A\) un espacio vectorial sobre un cuerpo
-  \(K\). Demostrar que dar una estructura de \(K\)-álgebra asociativa unital
-  sobre \(A\) es equivalente a dar una multiplicación asociativa \(K\)-bilineal \(\star :A
-  \times A \to A\) junto con una aplicación \(K\)-lineal \(\tau : K \to A\) tal
-  que \(\tau(k)\star a = ka = a \star \tau(k) \ \forall k \in K, a \in A\)}\\
-
-Supongamos que tenemos una estructura de \(K\)-álgebra sobre \(A\). Denotamos \(\star\) a la
-multiplicación de \(A\) como anillo y \(\tau :K \to Z(A)\) al morfismo que dota
-de estructura de \(K\)-álgebra.
- Veamos que \(\tau\) es \(K\)-lineal, sea \(k \in K\):
-\[
-\tau(k) = \tau(k) \star 1_A = k1_A = k \tau(1_K)
-\]
-Comprobemos ahora que \(\star\) es \(K\)-bilineal, la bilinealidad viene dada
-por la estructura de anillo. Sean \(k \in K, a,b \in A\)
-\[
-k(a \star b) = \tau(k) \star (a \star b) = (\tau(k) \star a) \star b = (ka)
-\star b
-\]
-\[
-k(a \star b) = \tau(k) \star (a \star b) = (\tau(k) \star a) \star b = (a \star
-\tau(k)) \star b = a \star (\tau(k) \star b) = a \star (kb)
-\]
-
-Supongamos ahora que tenemos ambas aplicaciones definidas. Notamos
-que \(\tau(1_K)\star a = 1_Ka = a = a\star
-\tau(1_K)\). Luego \(\tau(1_K) := 1_A\) actua como elemento
-neutro de \(A\) para la operación \(\star\). Si comprobamos que \(A\) con
-\((\star, 1_A)\) es un anillo, entonces tendremos que \(A\) es una
-\(K\)-álgebra. Como la operación es asociativa por hipótesis y ya tenemos el
-elemento neutro, solo nos quedaría comprobar la distributividad que la tenemos
-por ser \(\star\) una aplicación bilineal.
-
-\section{Ejercicio 6. *} \emph{Sea \(K\) un cuerpo. Comprobar que el anillo de polinomios
-es una \(K[X]\)-álgebra. Si ahora tomamos un ideal no nulo \(I\) de
-\(K[X]\), comprobar que \(A = K[X]/I\) tiene estructura de
-\(K\)-álgebra. Sabemos que existe un único polinómio \(p(X) \in K[X]\) tal que
-\(I = \langle p(X) \rangle\). Llamamos \(n\) al grado de \(p(X)\), y suponemos
-\(n > 0\). Comprobar que \(\mathcal{B} = \{1 + I, x + I, \dots, x^{n-1} + I\}\)
-es una base de \(A\) como \(K\)-espacio vectorial y, por tanto \(dim_KA = n\).
-Sea}
-\[
-p(X) = p_0 + p_1X + p_2X^2\dots + X^n
-\]
-\emph{Comprobar que la matriz de \(M_n(K)\) que representa al endomorfismo \(\lambda(x
-+ I)\) con respecto a la base \(\mathcal{B}\) es}
-\[
-\tilde{N}(p) = \begin{bmatrix}
-    0       &  \dots  & 0 & -p_0 \\
-    1       &  \dots  & 0 & -p_1 \\
-    \vdots &  & \vdots & \vdots \\
-    0       &  \dots  & 1 & -p_{n-1}
-\end{bmatrix}
-\]
-\emph{y que \(A\) es isomorfa a la subálgebra \(\{a_0I + a_1\tilde{N}(p) + \dots +
-  a_{n-1}\tilde{N}(p)^{n-1} : a_0, a_1, \dots, a_{n-1} \in K\} \subset M_n(K)\)}\\
-
-El anillo de polinomios \(K[X]\) es una \(K\)-álgebra utilizando el morfismo de
-anillos
-\[
-\begin{aligned}
-  \rho: K &\to K[X]\\
-        k &\mapsto k
-\end{aligned}
-\]
-El morfismo de anillos que da a \(A = K[X]/I\) estructura de \(K\)-álgebra es el
-siguiente:
-\[
-\begin{aligned}
-  \rho: K &\to K[X]/I \\
-  k &\mapsto k + I
-\end{aligned}
-\]
-La comprobación de que se tratan de morfismos de anillos es rutinaria.
-El algoritmo de división nos asegura que todos los polinomios de \(A\) tienen
-grado a lo sumo \(n-1\), por tanto \(\mathcal{B}\) es un sistema de generadores
-de \(A\) y forman una base por ser linealmente independientes.
-
-Sea el endomorfismo \(\lamda(x+I)(a) = (x+I)a\), es claro que las primeras
-\(n-1\) columnas de la matriz \(\tilde{N}(p)\) corresponden a multiplicar \(x +
-I\) por los elementos \(1 + I, \dots, x^{n-2} + I\). Ahora,
-\[
-(x + I)(x^{n-1} + I) = x^n + I = -p(X) + I
-\]
-De ahí la última columna de la matriz.
-
-\textbf{TODO: Dar isomorfismo y comprobarlo}
-
-\section{Ejercicio 7. *} \emph{Sea \(K\) un cuerpo. Dar la lista, salvo isomorfismos, de
-todas las \(K\)-álgebras asociativas unitales de dimensión 2.}\\
-
-\section{Ejercicio 8.} \emph{Expresar el cuerpo \(\mathbb{Q}(\sqrt(2))\) como una
-\(\mathbb{Q}\)-álgebra de un álgebra de matrices sobre \(\mathbb{Q}\).}
 
 \end{document}
