--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -6,11 +6,12 @@
 \usepackage{inputenc}
 \usepackage{geometry}
 \usepackage{titlesec}
+\usepackage{calc}
 \setlength{\parindent}{0pt}
 
 \titleformat{\section}[runin]
 {\normalfont\bfseries}
-{}{}{}
+{}{0pt}{}
 
 
 \begin{document}
@@ -26,15 +27,15 @@
 
 
 
-\input{Ejercicio1}
-\input{Ejercicio2}
-\input{Ejercicio3}
-\input{Ejercicio4}
-\input{Ejercicio5}
-\input{Ejercicio6}
-\input{Ejercicio7}
-\input{Ejercicio8}
-
+\input{Ejercicios/1}
+\input{Ejercicios/2}
+\input{Ejercicios/3}
+\input{Ejercicios/4}
+\input{Ejercicios/5}
+\input{Ejercicios/6}
+\input{Ejercicios/7}
+\input{Ejercicios/8}
+\input{Ejercicios/9}
 
 
 
