--- a/Ejercicios/6.tex
+++ b/Ejercicios/6.tex
@@ -43,7 +43,7 @@ El algoritmo de división nos asegura que todos los polinomios de \(A\) tienen
 grado a lo sumo \(n-1\), por tanto \(\mathcal{B}\) es un sistema de generadores
 de \(A\) y forman una base por ser linealmente independientes.
 
-Sea el endomorfismo \(\lamda(x+I)(a) = (x+I)a\), es claro que las primeras
+Sea el endomorfismo \(\lambda (x+I)(a) = (x+I)a\), es claro que las primeras
 \(n-1\) columnas de la matriz \(\tilde{N}(p)\) corresponden a multiplicar \(x +
 I\) por los elementos \(1 + I, \dots, x^{n-2} + I\). Ahora,
 \[
