--- a/Ejercicios/7.tex
+++ b/Ejercicios/7.tex
@@ -10,7 +10,8 @@ Consideramos
 \[
   \begin{aligned}
     f:K[X] &\to A \\
-    \alpha + \beta x &\mapsto \rho(\alpha) + \rho(\beta)a
+    \alpha &\mapsto \rho(\alpha)\\
+    x &\mapsto a
   \end{aligned}
 \]
 
