--- a/Ejercicios/1.tex
+++ b/Ejercicios/1.tex
@@ -1,4 +1,5 @@
-\section{Ejercicio 1.} \emph{Sea \(A\) un anillo. Diremos que \(A\) es trivial si
+\section{Ejercicio 1.}
+\emph{Sea \(A\) un anillo. Diremos que \(A\) es trivial si
   \(A = \{0\}\). Demostrar que \(A\) es trivial si, y sólo si, \(1 = 0\).}\\
 
 Supongamos que \(A\) es trivial, entonces como \(A\) es un anillo, \(\exists 1
