--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -13,7 +13,6 @@
 {\normalfont\bfseries}
 {}{0pt}{}
 
-
 \begin{document}
 
 \title{Álgebras, Grupos y Representaciones \\
@@ -23,9 +22,6 @@
 \author{Luis Antonio Ortega Andrés}
 
 \maketitle
-
-
-
 
 \input{Ejercicios/1}
 \input{Ejercicios/2}
@@ -37,12 +33,6 @@
 \input{Ejercicios/8}
 \input{Ejercicios/9}
 \input{Ejercicios/10}
-
-
-
-
-
-
-
+\input{Ejercicios/27}
 
 \end{document}
