Correcciones de estilo

--- a/Ejercicios/27.tex
+++ b/Ejercicios/27.tex
@@ -4,13 +4,14 @@ Por $e, a, b$ idempotentes, tenemos que
 \[
     a + b = e = e^2 = a^2 + b^2 + ab + ba = a + b + ab + ba \implies ab + ba = 0
 .\]
+Luego
 \begin{equation}\label{a}
-    ab = -ba
+    ab = -ba.
 \end{equation}
-Ahora, si multiplicamos a izquierda y derecha por $a$, por ser $a$ idempotente tenemos que $aba = -aba$. Ahora, como $char(R) \neq 2$, $aba = 0$. Ahora, sustituyendo $ab$ ó $ba$ respectivamente usando (\ref{a}), tenemos
+Multiplicando a izquierda y derecha por $a$, por ser este idempotente tenemos que $aba = -aba$. Ahora, usando que $char(R) \neq 2$, $aba = 0$. Por último, sustituyendo $ab$ ó $ba$ respectivamente usando (\ref{a}), tenemos
 \[
     0 = aba = -baa = -ba \implies ba = 0
-.\]
+\]
 \[
     0 = aba = -aab = -ab \implies ab = 0
 .\]
