--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -19,7 +19,8 @@
       \large Ejercicios
   }
 
-\author{Luis Antonio Ortega Andrés}
+\author{Luis Antonio Ortega Andrés, \\
+        Guillermo Galindo Ortuño}
 
 \maketitle
 
