--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -35,6 +35,7 @@
 \input{Ejercicios/9}
 \input{Ejercicios/10}
 \input{Ejercicios/11}
+\input{Ejercicios/12}
 \input{Ejercicios/27}
 
 \end{document}
