--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -36,6 +36,9 @@
 \input{Ejercicios/10}
 \input{Ejercicios/11}
 \input{Ejercicios/12}
+\input{Ejercicios/13}
+\input{Ejercicios/14}
+\input{Ejercicios/20}
 \input{Ejercicios/27}
 
 \end{document}
