--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -38,6 +38,7 @@
 \input{Ejercicios/12}
 \input{Ejercicios/13}
 \input{Ejercicios/14}
+\input{Ejercicios/15}
 \input{Ejercicios/20}
 \input{Ejercicios/27}
 
