--- a/Ejercicios/15.tex
+++ b/Ejercicios/15.tex
@@ -1,5 +1,5 @@
 \section{Ejercicio 15}.
-\textit{Sea \(\theta\) y \(T_\theta: \mathbb{R}^2 \rightarrow \mathbb{R}^2\) el endomorfismo que gira los vectores un ángulo \(\theta\) en sentido contrario de las agujas del reloj. Consideremos la correspondiente estructura de \(R[X]\)-módulo definida por \(T_\theta\) sobre \(\mathbb{R}^2\). Llamamos a este módulo \(V_\theta\). Discutir para que valores de \(\theta\) es \(V_\theta\) simple.}
+\textit{Sea \(\theta\) y \(T_\theta: \mathbb{R}^2 \rightarrow \mathbb{R}^2\) el endomorfismo que gira los vectores un ángulo \(\theta\) en sentido contrario de las agujas del reloj. Consideremos la correspondiente estructura de \(R[X]\)-módulo definida por \(T_\theta\) sobre \(\mathbb{R}^2\). Llamamos a este módulo \(V_\theta\). Discutir para que valores de \(\theta\) es \(V_\theta\) simple.}\\
 
 Claramente, si \(\theta = k\pi\) para algún \(k \in \mathbb{N}\),  el submódulo generado por cualquier vector es la recta vetorial con ese vector director, y por tanto \(V_\theta\) no es simple.
 
