--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -40,6 +40,8 @@
 \input{Ejercicios/14}
 \input{Ejercicios/15}
 \input{Ejercicios/20}
+\input{Ejercicios/21}
+\input{Ejercicios/22}
 \input{Ejercicios/27}
 
 \end{document}
