--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -39,6 +39,8 @@
 \input{Ejercicios/13}
 \input{Ejercicios/14}
 \input{Ejercicios/15}
+\input{Ejercicios/16}
+\input{Ejercicios/17}
 \input{Ejercicios/20}
 \input{Ejercicios/27}
 
