--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -41,6 +41,7 @@
 \input{Ejercicios/15}
 \input{Ejercicios/16}
 \input{Ejercicios/17}
+\input{Ejercicios/18}
 \input{Ejercicios/20}
 \input{Ejercicios/21}
 \input{Ejercicios/22}
