--- a/Ejercicios/18.tex
+++ b/Ejercicios/18.tex
@@ -4,4 +4,4 @@
 
 Supongamos que \(A\) es un anillo de división. Entonces, para todo \(0 \neq m \in A\) tenemos que  \(1 \in Am\) y por tanto  \(Am = A\), y usando el ejercicio anterior tenemos que  \(A\) es un \(A\)-módulo simple.
 
-Supongamos ahora que \(A\) es un \(A\)-módulo simple. Entonces para todo \( 0\neq m \in A\) tenemos que \(Am = A\), y por tanto, \(1 \in Am\), y como la acción de A es el producto, existe un elemento en  \(a^{-1} \in A\) tal que  \(a^{-1}a = 1\).
+Supongamos ahora que \(A\) es un \(A\)-módulo simple. Entonces para todo \( 0\neq m \in A\) tenemos que \(Am = A\), y por tanto, \(1 \in Am\), y como la acción de \(A\) es el producto, existe un elemento \(a^{-1} \in A\) tal que  \(a^{-1}a = 1\).
