--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -45,6 +45,7 @@
 \input{Ejercicios/20}
 \input{Ejercicios/21}
 \input{Ejercicios/22}
+\input{Ejercicios/25}
 \input{Ejercicios/27}
 
 \end{document}
