--- a/Ejercicios/25.tex
+++ b/Ejercicios/25.tex
@@ -14,4 +14,4 @@ por \(m(X) \in Ker\ e_T\).\\
 
 Ahora, sea \(\{v_i : i \in I\} \subset V\) un conjunto de generadores de \(V\), por el corolario 1.6.6 existe \(J \in I\) tal que \(V = \oplus_{j \in J} (K[X]/Ker\ e_T)v_j\), siendo cada uno de estos submódulos simples. Ahora, volviendo a ver \(V\) como  \(K[X]\)-módulo, los submódulos \(K[X]v_j\) para \(j \in J\) son simples, pues en caso de tener un súbmodulo propio \(M\), este sería también submódulo de \((K[X]/Ker\ e_T)v_j\).\\
 
-Por tanto, tenemos que \(V = \sum_{j \in J} K[X]v_j\), con \(K[X] v_j\) simple para todo \(j\) en  \(J\). Al igual que hicimos en el corolario 1.6.6, aplicamos la Proposición (TODO Esto tiene que ser así pero no lo entiendo) para obtener un \(K\) tal que  \(V = \oplus_{k \in K}K[X]v_k\).
+Por tanto, tenemos que \(V = \sum_{j \in J} K[X]v_j\), con \(K[X] v_j\) simple para todo \(j\) en  \(J\). Al igual que hicimos en el corolario 1.6.6, aplicamos el teorema 1.6.5 para obtener un \(\Gamma\) tal que  \(V = \oplus_{t \in \Gamma}K[X]v_t\).
