--- a/Ejercicios/20.tex
+++ b/Ejercicios/20.tex
@@ -9,14 +9,12 @@ Sabemos que un submódulo de nuestro \(\mathbb{R}[x]\)-módulo sobre
 \(\mathbb{R}^3\) tiene  que ser un subespacio de este, por tanto las posibles
 longitudes son \(2,3\) o \(4\).\\
 
-Veamos que debe existir un subespacio invariante por \(T\) ya sea de dimensión 1
-o dimensión 2.
+Veamos que, para cualquier espacio real de dimensión \(n\), y cualquier operador lineal \(T\), debe existir un subespacio invariante por \(T\) ya sea de dimensión 1 o dimensión 2.
 Si tomamos un vector no nulo \(v \in \mathbb{R}^3\), sabemos que existen unos
 coeficientes reales \(a_0, \dots, a_n\) tal que
 \[
   0 = a_0v + \dots + a_nT^n(v) = (a_0I + \dots + a_nT^n)(v)
 \]
-
 Factoriamos este polinomio en \(T\) en factores irreducibles de grado 1 y 2.
 Como el polinomio no es inyectivo, alguno de dichos factores debe no serlo.
 \begin{itemize}
@@ -28,36 +26,26 @@ Como el polinomio no es inyectivo, alguno de dichos factores debe no serlo.
   \(T^2 + \alpha T + \beta I\), \(\exists u \in \mathbb{R}^3\) tal que \((T^2 +
   \alpha T + \beta I)(u)= 0\). Sea entonces \(U = <u,T(u)>\), como \(T^2(u) =
   -\alpha T(u) - \beta u \), \(U\) es un subespacio invariante bajo \(T\).
-  Llamaremos a \(u, T(u)\) espacio propio por comodidad en la redacción.
 \end{itemize}
 
 Como estamos en \(\mathbb{R}^3\), la descomposición en irreducibles del
 polinomio característico de \(T\) contiene un polinomio de grado 1, luego
 siempre existe un vector propio.\\
 
-Nos limitamos  a 3 casos en el estudio de la longitud (los casos
+Nos limitamos a 2 casos en el estudio de la longitud (los casos
 anteriores no son excluyentes), a saber
 \begin{itemize}
-\item Existe un valor propio \(u\) y no existe ningún espacio propio. Entonces
-  tenemos la serie de composición
+\item Existe un valor propio \(u\) y no existe ningún espacio de la forma \(<u, T(u)>\) invariante por T. Entonces tenemos la serie de composición
   \[
     0 \subset \langle u \rangle \subset \mathbb{R}
   \]
   luego la longitud es 3.
-\item Existe un espacio propio \(\langle u, T(u) \rangle\), tal que \(u\) es
+\item Existe un espacio invariante bajo T \(\langle u, T(u) \rangle\), tal que \(u\) es
   un vector propio, tenemos entonces
   \[
     0 \subset \langle u \rangle \subset \langle u, T(u) \rangle\ \subset \mathbb{R}^3
   \]
 \end{itemize}
-
-En caso de tener \(2\) o \(3\) vectores propios, esta claro que tenemos al menos
-un subespacio de dimensión \(1\) y otro de dimensión \(2\) invariantes por
-\(T\), luego podríamos construir una serie de composición de longitud 4.\\
-
-En caso de tener un único vector propio, solo existe un subespacio invariante,
-luego podemos construir una serie de composición de longitud 3.\\
-
 
 A continuación mostramos un ejemplo de aplicación lineal \(T:\mathbb{R}^3 \rightarrow \mathbb{R}^3\) que genere un módulo de cada una de las posibles longitudes.
 Para dar la aplicación lineal únicamente tendremos que definir la imagen de una base de nuestro espacio, y por tanto utilizaremos la base usual
