Pequeño cambio ej20

--- a/Ejercicios/20.tex
+++ b/Ejercicios/20.tex
@@ -37,8 +37,8 @@ aplicación.\\
 Además es facil comprobar que todos los submódulos se generan de
 esta forma, pues sea \(\langle u \rangle = U\) un submódulo, se tiene que \(T(u)
 \in U \implies \exists a \in \mathbb{R}\) tal que \(T(u) = au\), luego \(u\) es un
-vector propio. En caso de ser \(U = \langle u , v \rangle\), si ninguno de ellos
-es un vector propio, entonces \(T(u)\) y \(u\) son linealmente independientes y
+vector propio. En caso de ser \(U = \langle u , v \rangle\), si alguno de ellos
+no es un vector propio, digamos por ejemplo \(u\), entonces \(T(u)\) y \(u\) son linealmente independientes y
 \(T(u) \in U \implies U = \langle u , T(u) \rangle\).\\
 
 Como estamos en \(\mathbb{R}^3\), la descomposición en irreducibles del
