--- a/Ejercicios/20.tex
+++ b/Ejercicios/20.tex
@@ -45,11 +45,11 @@ Como estamos en \(\mathbb{R}^3\), la descomposición en irreducibles del
 polinomio característico de \(T\) contiene un polinomio de grado 1, luego
 siempre existe un vector propio.\\
 
-Nos limitamos a 2 casos en el estudio de la longitud (los casos
+Nos limitamos a dos casos en el estudio de la longitud (los casos
 anteriores no son excluyentes), a saber
 \begin{itemize}
 \item Existe un valor propio \(u\) y no existe ningún espacio de la forma
-  \(\langle u, T(u)\rangle \) invariante por T. Entonces tenemos la serie de composición
+  \(\langle v, T(v)\rangle \) que contenga a u invariante por T. Entonces tenemos la serie de composición
   \[
     0 \subset \langle u \rangle \subset \mathbb{R}^3
   \]
