--- a/Ejercicios/21.tex
+++ b/Ejercicios/21.tex
@@ -5,16 +5,16 @@
   \(\mathbb{P}_n\) visto como \(\mathbb{R}[X]\)-módulo via \(T\)}.\\
 
 Consideremos los espacios vectoriales \(\mathbb{P}_{n-1},\dots,\mathbb{P}_0\),
-es claro que \(\mathbb{P}_i \subset \mathbb{P}_{i+1}\) es un subgrupo y es
-cerrado bajo derivación, luego es un submódulo. Esto nos permite crear la cadena
-
+es claro que \(\mathbb{P}_i \subset \mathbb{P}_{i+1} \ \forall i = 0,\dots,n-1
+\) y además son cerrados bajo derivación, luego son un submódulos.
+Consideramos entonces la siguiente cadena de submódulos.
 \[
   0 \subset \mathbb{P}_0 \subset \dots \subset \mathbb{P}_n
 \]
 
 Solo nos queda comprobar que cada eslabón este formado por un submódulo maximal,
 tomamos \(\mathbb{P}_i \subset \mathbb{P}_{i+1}\),  y añadamos un polinomio \(p\) de
-grado \(i+1\) a \(\mathbb{P}_i \), entonces es claro que con las operaciones de
-grupo podemos construir cualquier polinomio de grado \(i+1\), luego \(\langle
+grado \(i+1\) a \(\mathbb{P}_i \), entonces es claro que con las operaciones del
+espacio vectorial podemos construir cualquier polinomio de grado \(i+1\), luego \(\langle
 (p, \mathbb{P}_i) \rangle = \mathbb{P}_{i+1}\). Por lo tanto, los eslabones son
 maximales y tenemos una serie de composición.
