--- a/Ejercicios/22.tex
+++ b/Ejercicios/22.tex
@@ -1,29 +1,27 @@
 \section{Ejercicio 22. **} \textit{En las condiciones del ejercicio anterior, calcular
   todos los \(\mathbb{R}[X]\)-submódulos de \(\mathbb{P}_n\).}\\
 
-Como hemos visto en el apartado anterior, disponemos de \(\{\mathbb{P}_i\}_{i=0,\dots,n}\)
-Comprobemos que no tenemos otros submódulos, notemos que estamos buscando
-subgrupos cerrados bajo la acción de \(\mathbb{R}[X]\), de forma que, potencias
-de \(x\) actúan derivando el polinomio el número de veces que indique el
-exponente, y los números reales actúan multiplicándose por los polinomios.
+Comencemos viendo que los subespacios vectoriales \(\mathbb{P}_i\) con \(i
+\leq n\), son también \(\mathbb{R}[X]\)-submódulos. Esto es evidente pues la
+aplicación \(T\) consiste es la derivación. Luego estos espacios son cerrados
+ante \(T\).\\
 
-Es decir, si tomamos \(f = a_0 + a_1x + \dots + a_qx^q \in \mathbb{R}[X]\), actúa
-sobre un polinomio \(p \in \mathbb{P}_n\), de la forma
+Comprobemos ahora que estos son los únicos submódulos que tenemos. Para ello
+tomemos un polinomio \(p\) cualquiera de grado \(m < n\). Vamos a ver quien es
+el submódulo que genera \(\langle p \rangle\).\\
+
+Supongamos que
 \[
-  f \star p = a_0p + a_1p^{(1)} + \dots + a_qp^{(q)}
+  p = a_0 + a_1x + \dots + a_m x^m
 \]
-donde \(p^{(i)}\) denota la derivada \(i\)-ésima de \(p\).
 
-Supongamos entonces que queremos ver cuál es el menor submódulo que contiene a
-\(p\).  Notamos que al tener \(p\), tenemos todos sus polinomios proporcionales
-y todas sus derivadas, luego tenemos un polinomio de cada grado hasta el 0.
-Supongamos que el grado de \(p\) es \(m\), entonces existen unos coeficientes
-reales \(b_i \in \mathbb{R}\) tal que
+Consideremos entonces \(T^m(p) = m!a_m \in \mathbb{R}\), luego \(1 \in \langle p
+\rangle\). De la misma forma,
+\[T^{m-1}(p) = (m-1)!a_{m-1} + m!a_mx \implies
+\frac{T^{m-1}(p) - (m-1)!a_{m-1}}{m!a_m} = x \in \langle p \rangle\]
 
-\[
-  x^m = b_0p + b_1p^{(1)}+ \dots + b_mp^{(m)}
-\]
-Luego \(x^m\), está en nuestro submódulo, de igual forma están todos los \(x^i\)
-para \(i = 0,\dots,m\), luego el submódulo resulta ser \(\mathbb{P}_m\).
+Siguiendo un proceso inductivo, podemos ver entonces que \(x^i \in \langle p
+\rangle \ \forall i = 0,\dots,n\). Luego \(\langle p \rangle = \mathbb{P}_n\).\\
 
-Por ello estos son todos los submódulos que tenemos.
+Por ello, concluimos que \(\{\mathbb{P}_i\}_{i\leq n}\) son todos los
+\(\mathbb{R}[X]\)-submódulos de \(\mathbb{P}_n\).
