--- a/Ejercicios/25.tex
+++ b/Ejercicios/25.tex
@@ -1,7 +1,7 @@
 \section{Ejercicio 25. **}
 \textit{Supongamos \(T:V \rightarrow V\) un endomorfismo K-lineal, donde V es un espacio vectorial de dimensión finita que consideramos, como de costumbre, como un \(K[X]\)-módulo. Supongamos que el polinomio mínimo  \(m(X)\) de  \(T\) es irreducible en  \(K[X]\). Demostrar que existen  \(K[X]\)-submódulos simples \(V_1, \dots, V_t\) de \(V\) tales que  \(V = V_1 \oplus \dots \oplus V_t\) como \(K[X]\)-módulo.} \\
 
-Por \(m(X)\) irreducible, tenemos que \(K[X]/Ker\ e_T = K[X]/m(X)\) es un cuerpo. Entonces, podemos ver \(V\) como un \(K[X]/Ker\ e_T\) espacio vectorial, utilizando la misma acción que utilizamos para la estructura de \(K[X]\)-módulo. Para ello, tenemos que comprobar que la acción está bien definida. En efecto, sean \(p(X), q(X)\) pertencientes a una misma clase del cociente. Entonces
+Por \(m(X)\) irreducible, tenemos que \(K[X]/Ker\ e_T = K[X]/m(X)\) es un cuerpo. Entonces, podemos ver \(V\) como un \(K[X]/Ker\ e_T\) espacio vectorial, utilizando la misma acción que utilizamos para la estructura de \(K[X]\)-módulo. Para ello, tenemos que comprobar que la acción está bien definida. En efecto, sean \(p(X), q(X)\) pertencientes a una misma clase del cociente,
 
 \[
 p(X) = q(X) + r(X)m(X)
