--- a/Ejercicios/6.tex
+++ b/Ejercicios/6.tex
@@ -1,4 +1,4 @@
-\section{Ejercicio 6. *} \emph{Sea \(K\) un cuerpo. Comprobar que el anillo de polinomios
+\section{Ejercicio 6. * Sin Terminar.} \emph{Sea \(K\) un cuerpo. Comprobar que el anillo de polinomios
 es una \(K[X]\)-álgebra. Si ahora tomamos un ideal no nulo \(I\) de
 \(K[X]\), comprobar que \(A = K[X]/I\) tiene estructura de
 \(K\)-álgebra. Sabemos que existe un único polinómio \(p(X) \in K[X]\) tal que
@@ -55,4 +55,3 @@ Dado \(a \in A\) con \(a = (a_0, \dots, a_{n-1})\) en \(\mathcal{B}\) el
 morfismo de K-álgebras lleva \((a_0,\dots,a_{n-1}) \to a_0I + a_1\tilde{N}(p) + \dots +
   a_{n-1}\tilde{N}(p)^{n-1} \)
 
-\textbf{TODO terminar}
