--- a/Ejercicios/35.tex
+++ b/Ejercicios/35.tex
@@ -1,4 +1,4 @@
-\section{Ejercicio 35. **} \textit{Sea \(V\) un \(K\)-espacio
+\section{Ejercicio 35. ** Sin Terminar.} \textit{Sea \(V\) un \(K\)-espacio
   vectorial de dimensión finita \(n\) y \(T:V \to V\) una
   aplicación lineal. Diremos que un vector \(v \in V\) es cíclico para
   \(T\) si \(\{v, T(v), \dots, T^{n-1}(v)\}\) es una base de \(V\)
@@ -13,6 +13,10 @@ grado de \(m\) es \(n' < n\),  entonces \(m(T)=0 \implies T^{n}\) es una
 combinación lineal de \(\{Id,T,\dots,T^{n'-1}\}\) por lo tanto \(T^{n'}(v)\) se
 puede escribir como combinación lineal de \(\{v,T(v),\dots,T^{n'-1}(v)\}\),
 luego no puede existir un vector cíclico.\\
+
+
+
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
 
 Veamos ahora que si el polinomio mínimo tiene grado \(n\), entonces existe un
 vector cíclico. Notamos que si el grado del polinomio mínimo es \(n\), entonces
@@ -43,7 +47,7 @@ correspondiente, además como \((J - \lambda I)^k\neq 0 \ \forall k < n\), el
 polinomio mínimo \(m = (t-\lambda)^n\). Consideremos ahora que \(J\) es la
 matriz de Jordan formada por dos bloques sobre el mismo valor propio
 \(\lambda\), cada bloque de dimensiones \(n_1\) y \(n_2\) respectivamente y
-\(n_1 \geq n2\). El
+\(n_1 \geq n_2\). El
 polinomio característico es \((t-\lambda)^{n_1+n_2}\), pero \((J-\lambda I)^{n_1}
 = 0\), luego el polinomio mínimo es \((t-\lambda)^{n_1}\). Esto nos permite
 concluir que el polinomio mínimo de una matriz de Jordan cualquiera es de la
@@ -54,5 +58,10 @@ forma
 \]
 Donde \(\lambda_i\) son los valores propios y \(r_i\) el tamaño del mayor bloque correspondiente.\\
 
+Además, en caso de que el polinomio mínimo
+tenga grado \(n\), se tiene que \(n = r_1 + \dots + r_m\), luego solo existe un
+bloque de Jordan por cada valor propio, entonces, \(A\) y la matriz compañera de
+su polinomio característico \(C\), tienen la misma forma canónica de Jordan, un
+bloque de tamaño \(r_i\) para cada valor propio \(\lambda_i\), luego ambas son
+similares a la misma matriz de Jordan, luego son similares entre si.
 
-\textbf{TODO. Terminar}
