--- a/Ejercicios/7.tex
+++ b/Ejercicios/7.tex
@@ -1,4 +1,4 @@
-\section{Ejercicio 7. *} \emph{Sea \(K\) un cuerpo. Dar la lista, salvo isomorfismos, de
+\section{Ejercicio 7. * Sin terminar} \emph{Sea \(K\) un cuerpo. Dar la lista, salvo isomorfismos, de
 todas las \(K\)-álgebras asociativas unitales de dimensión 2.}\\
 
 Sea \(A\) una \(K\)-álgebra con morfismo de estructura \(\rho\). Sea \(\{1,
@@ -31,6 +31,3 @@ Tenemos entonces 3 opciones
 \item \(K[X]/\langle x^2+1\rangle\)
 \item \(K[X]/\langle x^2\rangle\)
 \end{itemize}
-
-\textbf{TODO Comprobar que es verdad}
-\textbf{TODO Comprobar cuales son asociativos unitales}
