--- a/Ejercicios/26.tex
+++ b/Ejercicios/26.tex
@@ -1,11 +1,14 @@
 \section{Ejercicio 26. **} \textit{En las condiciones del ejercicio anterior,
   demostrar que el polinomio característico de \(T\) es \(m(X)^t\)}.\\
 
-Comencemos viendo que si \(f = gh\), son 3 polinomios donde \(g,h\) son
+Probemos la siguiente proposición
+
+\textbf{Proposición. }Sean \(f,g,h \in K[X]\) tales que \(f = gh\), y \(g,h\) son
 coprimos, entonces
 \[
   Ker(f(T)) = Ker(g(T)) \oplus Ker(h(T))
 \]
+\textbf{Demostración.}\\
 Comencemos notando que \(Ker(g(T)), Ker(h(T)) \in Ker(f(T))\) y \(Ker(g(T)) +
 Ker(h(T)) \in Ker(f(T))\).\\ Por ser coprimos, existen polinomios \(u,v\) tales
 que
@@ -16,3 +19,9 @@ Tomemos entonces \(\alpha \in Ker(f(T))\), tenemos \(\alpha = u(T)g(T)\alpha +
 v(T)h(T)\alpha\).
 Donde  \( u(T)g(T)\alpha \in Ker(h(T))\) y  \( v(T)h(T)\alpha \in Ker(g(T))\),
 luego concluimos que \(Ker(f(T)) = Ker(g(T)) + Ker(h(T))\).
+
+Supongamos que existe \(\beta\) tal que \(g(T)\beta = h(T)\beta = 0\), luego
+tenemos que
+\[
+  0 = u(T)g(T)\beta + v(T)h(T)\beta = \beta
+\]
