--- a/Ejercicios/35.tex
+++ b/Ejercicios/35.tex
@@ -9,59 +9,34 @@
 
 Comencemos viendo que si admite un vector cíclico entonces el polinomio mínimo
 tiene grado \(n\). Sabemos que el polinomio mínimo satisface que \(m(T)=0\). Supongamos que el
-grado de \(m\) es \(n' < n\),  entonces \(m(T)=0 \implies T^{n}\) es una
+grado de \(m\) es \(n' < n\),  entonces \(m(T)=0 \implies T^{n'}\) es una
 combinación lineal de \(\{Id,T,\dots,T^{n'-1}\}\) por lo tanto \(T^{n'}(v)\) se
 puede escribir como combinación lineal de \(\{v,T(v),\dots,T^{n'-1}(v)\}\),
 luego no puede existir un vector cíclico.\\
 
-
-
-\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
-
-Veamos ahora que si el polinomio mínimo tiene grado \(n\), entonces existe un
-vector cíclico. Notamos que si el grado del polinomio mínimo es \(n\), entonces
-coincide con el polinomio característico. Sea \(N\) la matriz compañera de
-ambos. Sea \(\{e_1,\dots,e_n\}\) la base usual de \(V\), sabemos que la matriz
-compañera verifica que \(N^i e_1 = e_{i+1}\), luego, nuestro objetivo es
-verificar que existe una matriz de cambio de base \(P\), tal que \(P^{-1}TP =
-N\) visto \(T\) como matriz. En ese caso tendremos que sea \(v = P(e_1)\), el conjunto
-\(\{v,\dots,T^{n-1}v\}\) sería una base de \(V\), luego \(v\) sería un vector
-cíclico.\\
-
-Veamos que dos matrices son similares si tienen el mismo polinomio mínimo, sean
-\(A, B\) las matrices similares tales que \(A = S^{-1}BS\), sea \(m_A\) el
-polinomio mínimo de \(A\), se tiene
+Supongamos ahora que el polinomio mínimo \(m\) tiene grado \(n\). Sea
 \[
-  0 = m_A(A) = m_A(S^{-1}BS) = S^{-1}m_A(B)S
+  m = \prod_i m_i^{n_i}
 \]
-donde la última igualdad viene de evaluar el polinomio mínimo en \(S^{-1}BS\) y
-sacar factor común de cada término. Con esto tenemos que \(m_A\) anula \(B\), y
-de forma similar podemos ver que \(m_B\) anula a \(A\). Como los polinomios
-mínimos son los mónicos de menor grado que anulan a su matriz, \(m_A = m_B\).\\
-
-Veamos ahora que el polinomio mínimo se descompone en producto de factores
-lineales, para ello consideremos una matriz con un único bloque de Jordan \(J\)
-(una matriz y si forma canónica de Jordan son similares), el polinomio
-característico es de la forma \((t-\lambda)^n\) con \(\lambda\) el valor propio
-correspondiente, además como \((J - \lambda I)^k\neq 0 \ \forall k < n\), el
-polinomio mínimo \(m = (t-\lambda)^n\). Consideremos ahora que \(J\) es la
-matriz de Jordan formada por dos bloques sobre el mismo valor propio
-\(\lambda\), cada bloque de dimensiones \(n_1\) y \(n_2\) respectivamente y
-\(n_1 \geq n_2\). El
-polinomio característico es \((t-\lambda)^{n_1+n_2}\), pero \((J-\lambda I)^{n_1}
-= 0\), luego el polinomio mínimo es \((t-\lambda)^{n_1}\). Esto nos permite
-concluir que el polinomio mínimo de una matriz de Jordan cualquiera es de la
-forma
-
+la descomposición de \(m\) en factores irreducibles y consideremos
 \[
-  m = \prod(t - \lambda_i)^{r_i}
+  V_i = Ker(m_i(T)) = \{v \in V \ | \ m_i(T)(v) = 0\}
 \]
-Donde \(\lambda_i\) son los valores propios y \(r_i\) el tamaño del mayor bloque correspondiente.\\
+Utilizando un proceso inductivo en la proposición del ejercicio 26, podemos ver
+que \(V = \oplus_i V_i\), además, es sencillo comprobar que son submódulos de \(V\) puesto que \(T\) y \(m_i(T)\)
+conmutan, luego \(m_i(T)(T(v)) = T(m_i(T)(v)) = 0\).
+Notemos que \(m_i^{n_i - 1} \neq 0\) en \(V_i \ \forall i\), ya que en caso
+contrario, lo multiplicariamos por el resto de factores irreducibles y
+tendríamos un polinomio que anula todo \(V\) de grado menor \(n\).\\
 
-Además, en caso de que el polinomio mínimo
-tenga grado \(n\), se tiene que \(n = r_1 + \dots + r_m\), luego solo existe un
-bloque de Jordan por cada valor propio, entonces, \(A\) y la matriz compañera de
-su polinomio característico \(C\), tienen la misma forma canónica de Jordan, un
-bloque de tamaño \(r_i\) para cada valor propio \(\lambda_i\), luego ambas son
-similares a la misma matriz de Jordan, luego son similares entre si.
+Entonces existe \(v_i \not \in Ker(m_i^{n_i-1}(T)) \ \forall i\).\\
 
+Si alguno de estos \(v_i\) se anulara en un \(m_j(T)\) con \(i \neq j\),
+entonces el polinomio mínimo de \(\langle v_i \rangle\) divide a \(m_j\) y
+\(m_i^{n_i}\), que como son primos relativos resulta ser 1, luego \(v_i = 0\).
+
+Consideramos entonces \(x = \oplus_i v_i\), tenemos que ningún divisor de \(m\)
+evaluado en \(T\) anula a \(x\). Entonces \(x\) es un vector que solo se anula
+por \(m\) y multiplos suyos, luego polinomio de menor grado evaluado en \(T\) y
+en \(x\) no resulta 0. Es decir, \(\{x, T(x), \dots, T^{n-1}(x)\}\)
+son linealmente independientes.
