--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -46,6 +46,7 @@
 \input{Ejercicios/21}
 \input{Ejercicios/22}
 \input{Ejercicios/25}
+\input{Ejercicios/26}
 \input{Ejercicios/27}
 
 \input{Ejercicios/35}
