--- a/Ejercicios/26.tex
+++ b/Ejercicios/26.tex
@@ -26,8 +26,9 @@ tenemos que
   0 = u(T)g(T)\beta + v(T)h(T)\beta = \beta
 \]
 
-\textbf{Proposición.} Sea \(T: V \rightarrow V \) un endomorfismo \(K\)-lineal, con \(V\) espacio vectorial de dimensión finita. Entonces, si el polinomio mínimo \(m(X)\) de  \(T\) es irreducible en  \(K[X]\), el polinomio característico \(p(X)\) de T se escribe como \(m(X)^t\) para algún \(t \in \mathbb{N}\).
+\textbf{Proposición.} Sea \(T: V \rightarrow V \) un endomorfismo \(K\)-lineal, con \(V\) espacio vectorial de dimensión finita. Entonces, si el polinomio mínimo \(m(X)\) de  \(T\) es irreducible en  \(K[X]\), el polinomio característico \(p(X)\) de T se escribe como \(m(X)^t\) para algún \(t \in \mathbb{N}\).\\
 
-Supongamos que el polinomio característico de \(T\) es  \(mg\), donde  \(g\) es primo relativo con \(m\). Entonces, usando la proposición anterior tenemos que \(V = Ker(m(T)) \oplus Ker(g(T))\). Es facil comprobar que el polinomio mínimo de \(T\) es el mínimo común múltiplo del polinomio mínimo de \(T\restriction_{Ker(m(T))}\) y el polinomio mínimo \(T\restriction_{Ker(g(T))}\).\\
+\textbf{Demostración.}\\
+Razonando por contradicción, supongamos que el polinomio característico de \(T\) es  \(mg\), donde  \(g\) es primo relativo con \(m\). Entonces, usando la proposición anterior tenemos que \(V = Ker(m(T)) \oplus Ker(g(T))\). Es facil comprobar que el polinomio mínimo de \(T\) es el mínimo común múltiplo del polinomio mínimo de \(T\restriction_{Ker(m(T))}\) y el polinomio mínimo \(T\restriction_{Ker(g(T))}\).\\
 
 Ahora, como el polinomio mínimo de \(T\restriction_{Ker(m(T))}\) es \(m\) también, y este es irreducible, tenemos que \(g = 1\), lo que prueba nuestro resultado.
