--- a/Ejercicios/26.tex
+++ b/Ejercicios/26.tex
@@ -35,4 +35,4 @@ Ahora, como el polinomio mínimo de \(T\restriction_{Ker(m(T))}\) es \(m\) tambi
 
 Con esto, solo necesitamos probar que, dado un \(v\) cualquiera, la dimensión como subespacio de \(K[X]v\) es el grado del polinomio mínimo, ya que, utilizando el ejercicio anterior, tendríamos que la dimensión de nuestro espacio vectorial sería \(deg(m) \cdot t\). Veámoslo.
 
-Sea \(w \in K[X]v\), tenemos que  \(w = g(T)(v)\). Ahora bien, diviendo nuestro polinomio  \(g\) por el polinomi mínimo  \(m\), tenemos que  \(g = mh + r\), donde \(r\) es un polinomio de grado estrictamente menor que el del polinomio mínimo. Por tanto, para cualquier polinomio \(g\) existe un polinomio \(r\) de grado estrictamente menor que el grado del polinomio mínimo \(m\) tal que \(g(T)(v) = r(T)(v)\). Por tanto, \(\{v, T(v), T^2(v)\}\) forman un sistema de generadores de \(K[X]v\).
+Sea \(w \in K[X]v\), tenemos que  \(w = g(T)(v)\). Ahora bien, diviendo nuestro polinomio  \(g\) por el polinomi mínimo  \(m\), tenemos que  \(g = mh + r\), donde \(r\) es un polinomio de grado estrictamente menor que el del polinomio mínimo. Por tanto, para cualquier polinomio \(g\) existe un polinomio \(r\) de grado estrictamente menor que el grado del polinomio mínimo \(m\), digamos \(n\), tal que \(g(T)(v) = r(T)(v)\). Por tanto, \(\{v, T(v), \dots, T^n(v)\}\) forman un sistema de generadores de \(K[X]v\).
